Corrección y realización de varias actividades tema 3 - 26/09/2023

--- a/Tema 3/Ejercicios Tema 3/Ejercicio 4.html
+++ b/Tema 3/Ejercicios Tema 3/Ejercicio 4.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <script src="ejercicio4.js"></script>
     <title>Ejercicio 4</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body onload="calcularPrimas();"></body>
 </html>
