--- a/Tema 3/Ejercicios Tema 3/Ejercicio 8.html
+++ b/Tema 3/Ejercicios Tema 3/Ejercicio 8.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="ejercicio8.js"></script>
     <title>Ejercicio  8</title>
 </head>
-<body>
+<body onload="factoresPrimos();">
     
 </body>
 </html>
