Avance actividad tema 5

--- a/Tema 5/Ejercicios/Actividad 1/Actividad5.1.html
+++ b/Tema 5/Ejercicios/Actividad 1/Actividad5.1.html
@@ -6,7 +6,7 @@
     <title>Tarea 1 - Tema 5</title>
     <script src="actividad5.1.js"></script>
 </head>
-<body onload="meterValores();">
+<body onload="operaciones();">
     
 </body>
 </html>
