--- a/Tema 6/Actividades/ActividadExamen/examenAnterior.html
+++ b/Tema 6/Actividades/ActividadExamen/examenAnterior.html
@@ -42,7 +42,12 @@
       function calcularMedias(valores){
         var matrizAnterior = valores;
         var mediaTotal = 0;
+        var mediaZona = 0;
+        var zonaString ="";
         var contador = 0;
+        // Creamos una funcion de tipo flecha para usar el metodo reduce
+        const sumaZona = mediaZona => mediaZona.reduce((a,b) => a+b,0);
+
         // Comprobación de errores(matriz vacia)
         if (matrizAnterior === null || matrizAnterior.length === 0) {
           alert("No se ha añadido contenido a la matriz");
@@ -50,7 +55,12 @@
         }
         // Iteramos dentro de la matriz
         for (var i = 0; i < matrizAnterior.length; i++){
+          // Media zona
+          mediaZona = (sumaZona(matrizAnterior[i])/matrizAnterior[i].length);
+          alert("Temperatura media en la zona " + (i+1) + " es de " + mediaZona.toFixed(2) + "º");
             for (var j = 0; j < matrizAnterior[i].length; j++){
+
+                // Media global
                 mediaTotal += matrizAnterior[i][j];
                 contador++;
             }
