Actividad 6.3 (falta funcion borrar)

--- a/Tema 6/Actividades/Actividad 3/actividad6_3b.html
+++ b/Tema 6/Actividades/Actividad 3/actividad6_3b.html
@@ -98,8 +98,7 @@
 
           // Deberemos iterar dentro del array de objetos. Buscaremos en la nombre de cada objeto para poder borrarlo
           for (let i = 0; i < this.#articulos.length; i++) {
-            let propiedades = this.#articulos[i];
-            if (propiedades.cod === articuloParaBorrar) {
+            if (this.#articulos[i].cod === articuloParaBorrar) {
               this.#articulos.splice(i, 1); // Eliminamos el objeto en cuestión
               alert(
                 "El artículo " +
