Actividad 6.3 + Inicio tema 7

--- a/Tema 6/Actividades/Actividad 3/actividad6_3a.html
+++ b/Tema 6/Actividades/Actividad 3/actividad6_3a.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 3a - Tema 6 (Parte C)</title>
     <script>
+        // Clase Empleado
         class Empleado{
             #edad;
             constructor(nombre,apellido,edad){
@@ -16,6 +17,7 @@
 
         }
 
+        // Clase hija de empleado, llamada Profesor
         class Profesor extends Empleado{
             cargo;
             constructor(nombre,apellido,edad,cargo){
