--- a/Tema 6/Actividades/Actividad 3/actividad6_3b.html
+++ b/Tema 6/Actividades/Actividad 3/actividad6_3b.html
@@ -6,38 +6,39 @@
     <title>Tarea 3b - Tema 6 (Parte C)</title>
     <script>
       // Definimos por ahora dos clases: articulo y la propia cesta
+
+      // Clase Articulo. Contiene los atributos de un articulo. Método articulo(), útil para la lectura de las propiedades
       class Articulo {
         #cod;
         #nombre;
         #cantidad;
         #precio;
+
         constructor(cod, nombre, cantidad, precio) {
           this.#cod = cod;
           this.#nombre = nombre;
           this.#cantidad = cantidad;
           this.#precio = precio;
         }
+
+        // Metodo usado para la lectura de las propiedades/atributos del objeto
         articulo() {
           return {
             cod: this.#cod,
-            nombre:this.#nombre,
-            cantidad:this.#cantidad,
-            precio:this.#precio
-          }
+            nombre: this.#nombre,
+            cantidad: this.#cantidad,
+            precio: this.#precio,
+          };
         }
       }
 
+      // Clase cesta. Contiene multiples metodos, usados para mostrar un menú.
       class Cesta {
         #articulos = [];
-        constructor(articulos) {
-          this.#articulos = articulos;
-        }
-        articulos() {
-          return this.#articulos;
-        }
-
-        verCesta() {
-
+        constructor() {} // Dejamos el constructor vacio  
+        
+        // Métodos de la clase Cesta. Todos serán privados, excepto el menú, que será el que se inicializara  
+        #verCesta() {
           // Condicional para comprobar si el array está vacío
           if (this.#articulos.length === 0) {
             alert("Cesta vacía");
@@ -71,7 +72,7 @@
           alert(resultado);
         }
 
-        insertarArticulo(id) {
+        #insertarArticulo(id) {
           let cod = id;
           let nombre = prompt("Introduce el nombre del articulo");
           let cantidad = Number(
@@ -84,7 +85,7 @@
           this.#articulos.push(articulo);
         }
 
-        borrarArticulo() {
+        #borrarArticulo() {
           // Comprobaremos primero si el array está vacío
           if (this.#articulos.length === 0) {
             alert("No hay ningún artículo en la cesta");
@@ -114,7 +115,7 @@
           alert("Artículo no encontrado, revisa la cesta!");
         }
 
-        vaciarCesta() {
+        #vaciarCesta() {
           if (this.#articulos.length === 0) {
             alert(
               "La cesta fue vaciada anteriormente o todavía no hay contenido"
@@ -125,45 +126,49 @@
             this.#articulos.length = 0;
           }
         }
-      }
 
-      function menu() {
-        var bucle = true;
-        var articulos = [];
-        var cesta = new Cesta(articulos);
-        var id = 1;
+        menu() {
+          var bucle = true;
+          var id = 1;
 
-        while (bucle) {
-          var numOpcion = Number(
-            prompt(
-              "                                         Cesta de la compra\n1. Ver cesta\n2. Insertar un  artículo\n3. Borrar un artículo\n4. Vaciar cesta\n5. Salir"
-            )
-          );
-          switch (numOpcion) {
-            case 1:
-              cesta.verCesta();
-              break;
-            case 2:
-              cesta.insertarArticulo(id);
-              id++;
-              break;
-            case 3:
-              cesta.borrarArticulo();
-              break;
-            case 4:
-              cesta.vaciarCesta();
-              break;
-            case 5:
-              alert("Saliendo de la cesta....");
-              bucle = false;
-              break;
-            default:
-              alert("Opción o función no permitida/implementada");
-              break;
+          while (bucle) {
+            var numOpcion = Number(
+              prompt(
+                "                                         Cesta de la compra\n1. Ver cesta\n2. Insertar un  artículo\n3. Borrar un artículo\n4. Vaciar cesta\n5. Salir"
+              )
+            );
+            switch (numOpcion) {
+              case 1:
+                debugger;
+                this.#verCesta();
+                break;
+              case 2:
+                this.#insertarArticulo(id);
+                id++;
+                break;
+              case 3:
+                this.#borrarArticulo();
+                break;
+              case 4:
+                this.#vaciarCesta();
+                break;
+              case 5:
+                alert("Saliendo de la cesta....");
+                bucle = false;
+                break;
+              default:
+                alert("Opción o función no permitida/implementada");
+                break;
+            }
           }
         }
+        
       }
+
+      // Instanciamos la clase Cesta
+      var cesta = new Cesta();
+      cesta.menu();
     </script>
   </head>
-  <body onload="menu();"></body>
+  <body></body>
 </html>
