--- a/Tema 8/Actividades/actividad8_1.html
+++ b/Tema 8/Actividades/actividad8_1.html
@@ -27,7 +27,7 @@
         <div class="zonaCesta">
             <div class="col-sm-5 col-7 col-11">
             
-                <img width="64" height="64" src="https://img.icons8.com/cute-clipart/64/shopping-basket-success.png" alt="shopping-basket-success"/><span><h3>Cesta</h3></span> 
+                <h2><img width="64" height="64" src="https://img.icons8.com/cute-clipart/64/shopping-basket-success.png" alt="shopping-basket-success">Cesta</h2>
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -42,7 +42,9 @@
 
                     </tbody>
                 </table>
-                
+                <hr>
+                <p class="text-right">Total: <span id="total">0.00</span>€</p>
+                <p class="text-right">Total + IVA(21%): <span id="totalIVA">0.00</span>€</p>
 
 
         </div>
