--- a/Tema 8/Actividades/actividad8_1.html
+++ b/Tema 8/Actividades/actividad8_1.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Zona del titulo -->
         <div class="zonaTitulo">
-            <h2><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Amazon_icon.svg/2048px-Amazon_icon.svg.png" height="50px" width="auto">De todo...</h2>
+            <h2><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Amazon_icon.svg/2048px-Amazon_icon.svg.png" height="50px" width="auto"><span>De todo...</span></h2>
             <p><strong>Ejemplo cálculo de cesta o carrito de la compra...</strong></p>
         </div>
         <!-- Zona dinamica -->
@@ -27,7 +27,7 @@
         <div class="zonaCesta">
             <div class="col-sm-5 col-7 col-11">
             
-                <h2><img width="64" height="64" src="https://img.icons8.com/cute-clipart/64/shopping-basket-success.png" alt="shopping-basket-success">Cesta</h2>
+                <h2><img width="64" height="64" src="https://img.icons8.com/cute-clipart/64/shopping-basket-success.png" alt="shopping-basket-success"><span>Cesta</span></h2>
                 <table class="table table-striped">
                     <thead>
                         <tr>
