--- a/Tema 8/Actividades/actividad8_1.html
+++ b/Tema 8/Actividades/actividad8_1.html
@@ -50,6 +50,12 @@
         </div>
         
     </div>
+    <footer class="footer mt-auto py-3 fixed-bottom bg-light centrarFooter">
+        <div class="mb-3">
+          <span class="text-muted">© 2023 
+              Daniel Alfonso Rodríguez Santos - DWEC - 2º DAW - Curso 23/24</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="actividad8_1.js"></script>
 </body>
